updated hello message in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    Hello everyone!!<br>
+    Hello World!!<br>
     This is the current date and time:
     <py-script>
       from datetime import datetime
