example showing github bages pipeline

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
     Hello World!!<br>
+    Here is a new commit message<br>
     This is the current date and time:
     <py-script>
       from datetime import datetime
