--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
       now = datetime.now()
       now.strftime("%m/%d/%Y, %H:%M:%S")
     </py-script>
+    <br>
+  <a href="eddie.html">Go to Eddie's page</a>
   </body>
 </html>
