updated the webpage body of eddie.html

--- a/eddie.html
+++ b/eddie.html
@@ -15,6 +15,6 @@
   <body>
     <a href="index.html">Go back home</a>
     <br>
-    <p>This is Eddie's page</p>
+    <p>This is Eddie's page, and its going to need a lot of work</p>
   </body>
 </html>
